# music

./: .gitignore  config.json  dl.py  manifest.json  requirements.txt
music_mgr/: Cargo.toml  manifest.default.json  manifest.json
music_mgr/src/: cli.rs  constants.rs  downloader.rs  logger.rs  main.rs  manifest.rs  process_manager.rs  prompt.rs  util.rs
music_mgr/src/commands/: add.rs  mod.rs
music_mgr/src/commands/gui/: mod.rs  nav_bar.rs  song_edit_window.rs
music_mgr/src/config/: cli.rs  mod.rs
music_mgr/src/manifest/: mod.rs  song.rs
music_mgr/src/manifest/v1/: mod.rs  song.rs
